CDAP-6372 add java opts config option
Making the extra java opts a configuration setting instead of
hardcoding it. Also adding jira references to records in and out.